--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Running Shoe Health</title>
+  <title>GRANOLA Running Shoe Health</title>
   <style>
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; margin: 2rem; max-width: 700px; }
     h1 { margin-bottom: 0.25rem; }
@@ -38,7 +38,7 @@
   <div id="out" class="card" style="display:none;"></div>
 
   <div class="footer">
-    <small>Made with 💚. This page calls an AWS Lambda Function URL.</small>
+    <small>Made with 💚. This page calls an AWS Lambda Function URL. GRANOLA FOR LIFE.</small>
   </div>
 
   <script>
