--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-  <h1>🏃‍♀️ Running Shoe Health</h1>
+  <h1>🏃‍♀️GRANOLA Running Shoe Health</h1>
   <p class="muted">Enter your name and shoe health (0–100) to get a recommendation.</p>
 
   <form id="form" novalidate>
