--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <form id="form" novalidate>
     <label>
       Owner name
-      <input id="owner" name="owner" placeholder="e.g., Camille" required />
+      <input id="owner" name="owner" placeholder="e.g., Andy" required />
     </label>
 
     <label>
